fixed OBO pixel alignments

--- a/css/article.css
+++ b/css/article.css
@@ -14,7 +14,8 @@ article section
     position: relative;
     border-top:1px solid rgba(255, 255, 255, 0.25);
 
-    padding:50px 0px;
+    padding-top:49px; /* accounts for 1px border */
+    padding-bottom:50px;
 }
 
 article section:before
